--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,31 @@
 * {
-	margin:0;
-	padding:0;
-	list-style:none;
-	text-decoration: none;
-	font-family: AdihausDIN,Helvetica,Arial,sans-serif;
+    margin:0;
+    padding:0;
+    list-style:none;
+    text-decoration: none;
+    font-family: AdihausDIN,Helvetica,Arial,sans-serif;
 }
 /*---------------------Start-style------------------*
 
 /*-----header--------*/
 body {
-	padding-top: 139px;
+    padding-top: 80px;
 }
 header {
-	background-color: #222;
+    background-color: #222;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 9;
 }
 .container {
-	max-width:1220px;
-	margin: 0 auto;
-	width: 100%;
-	padding: 0 16px;
+    max-width:1220px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 0 16px;
 }
 .top-links {
-	float: right;
+    float: right;
 }
 .top-links li {
     display: inline-block;
@@ -40,7 +40,7 @@ header {
     font-weight: 400;
 }
 .logo {
-	float: left;
+    float: left;
     width: 45%;
 }
 .header-menu li {
@@ -48,17 +48,17 @@ header {
     padding: 0 7px;
 }
 .logo > a {
-	float: left;
+    float: left;
     width: 70px;
     margin-top: -15px;
     padding-left: 16px;
 }
 .header-bottom {
-	display: inline-block;
+    display: inline-block;
     width: 100%;
 }
 .header-menu {
-	display: inline-flex;
+    display: inline-flex;
 }
 .header-menu {
     display: inline-flex;
@@ -66,10 +66,10 @@ header {
     margin-left: 22px;
 }
 .right-part-content {
-	float: right;
+    float: right;
 }
 .header-bottom-offer {
-	background-color: #fff;
+    background-color: #fff;
     text-align: center;
     border-bottom: 1px solid #222;
     padding: 10px 0;
@@ -81,7 +81,7 @@ header {
     margin-left: 12px;
 }
 .header-menu li a {
-	color: #fff;
+    color: #fff;
     padding: 10px 1px;
     font-size: 13px;
     text-transform: uppercase;
@@ -101,10 +101,10 @@ input[type="text"] {
     font-size: 17px;
 }
 .right-part-content {
-	position: relative;
+    position: relative;
 }
 .input-search a {
-	color: #fff;
+    color: #fff;
     margin-left: 20px;
     margin-right: 10px;
 }
@@ -127,12 +127,12 @@ input[type="text"] {
     text-align: left;
 }
 footer .container {
-	max-width: 960px;
-	margin: 0 auto;
-	padding: 0;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0;
 }
 .form-sign-up {
-	float: right;
+    float: right;
     width: 40%;
     position: relative;
 }
@@ -166,7 +166,7 @@ footer .container {
     float: left;
 }
 .footer-bottom {
-	background-color: #363738;
+    background-color: #363738;
     padding: 9px 0;
     display: inline-block;
     width: 100%;
@@ -174,16 +174,16 @@ footer .container {
     font-size: 13px;
 }
 .footer-bottom p {
-	    float: left;
+        float: left;
 }
 .footer-right {
-	float: right;
+    float: right;
 }
 .footer-right-bottom li {
     display: inline-block;
 }
 .footer-right-bottom li  a{
-	 padding: 0 10px;
+     padding: 0 10px;
     color: #fff;
 }
 .footer-links h5 {
@@ -355,4 +355,167 @@ a.heart {
     display: inline-block;
     color: #fff;
     font-size: 14px;
+}
+.content-one {
+    background: url(../images/image-1.jpg);
+    height: 337px;
+    width: 50%;
+    float: left;
+    background-size: 100% !important;
+    background-repeat: no-repeat;
+    position: relative;
+}
+.content-two {
+    background: url(../images/image-2.jpg);
+    height: 337px;
+    width: 50%;
+    float: left;
+    background-size: 100% !important;
+    background-repeat: no-repeat;
+    position: relative;
+}
+.content-one p , .content-two p {
+    font-size: 24px;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.content-one a , .content-two a {
+    background: #fff;
+    padding: 20px 30px;
+    display: inline-block;
+    color: #000;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+.content-two a{
+    background: #000;
+    color: #fff;
+}
+.content-two p{
+    color: #000;
+}
+.content-one div {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    text-align: center;
+    right: 0;
+}
+.content-two div {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    text-align: center;
+    right: 0;
+}
+.banner-two {
+    background: url(../images/banner-2.jpg);
+    height: 500px;
+        background-size: 100% !important;
+    overflow: hidden;
+    clear: both;
+    position: relative;
+}
+.banner-two-content h2 {
+    font-size: 35px;
+}
+.banner-two-content p {
+    width: 80%;
+    font-size: 18px;
+    margin: 30px 0px;
+}
+.banner-two-content a {
+    background: #fff;
+    padding: 20px 30px;
+    color: #000;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    display: inline-block;
+}
+.banner-two-content {
+    position: absolute;
+    bottom: 60px;
+    color: #fff;
+    left:5%;
+}
+.shop-two .content-one{
+    background: url(../images/image-4.jpg);
+    color: #000 !important;
+}
+.shop-two .content-two{
+    background: url(../images/image-3.jpg);
+}
+.shop-two .content-two p{
+    color: #fff !important;
+}
+.shop-two .content-one p{
+    color: #000;
+}
+.login-form h2 , .login-content h2 {
+    font-size: 34px;
+    font-weight: 800;
+    color: #000;
+    margin-top: 50px;
+}
+a.forget {
+    margin-top: 5px;
+    display: inline-block;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+.login-form form input {
+    width: 70%;
+    margin: 10px 0px;
+    padding: 7px;
+    color: #999;
+}
+.login-form , .login-content {
+    width: 50%;
+    float: left;
+    margin-bottom: 50px;
+}
+.login{
+    background: rgba(2,134,205,1); 
+}
+.google{
+    background: #e74847;
+}
+.yahoo{
+    background: #2d1451;
+}
+.facebook{
+    background: #4267b2;
+}
+.runtastic{
+    background: #3395ff;
+}
+.buttons a {
+    display: block;
+    padding: 15px;
+    margin: 10px 0;
+    text-align: center;
+    color: #fff;
+    width: 70%;
+}
+.buttons p {
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+.login-content p {
+    font-size: 14px;
+    margin: 15px 0;
+}
+.login-content i {
+    color: #4ecb68;
+}
+.login-content a {
+    background: #000;
+    padding: 15px;
+    display: inline-block;
+    width: 70%;
+    text-align: center;
+    color: #fff;
 }
