--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 /*-----header--------*/
 body {
-    padding-top: 80px;
+    padding-top: 118px;
 }
 header {
     background-color: #222;
@@ -518,4 +518,174 @@ a.forget {
     width: 70%;
     text-align: center;
     color: #fff;
+}
+/*------------------------------help-page----------------------*/
+.help-bg {
+    background-image: url('../images/background-image.png');
+    background-size: 100% 100%;
+    padding: 150px 0;
+}
+.help-bg .form-sign-up, .help-bg h2 {
+    float: none;
+    width: 80%;
+    margin: auto;
+}
+.help-bg h2 {
+    font-weight: bold;
+    font-size: 45px;
+    margin-bottom: 20px;
+}
+.header-bottom-offer.help {
+    text-align: left;
+    padding: 10px 8%;
+    color: #fff;
+    background-color: #000;
+}
+.header-bottom-offer.help  p {
+    color: #fff;
+}
+.content-help {
+    padding: 50px 0;
+}
+.content-help h2 {
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 25px;
+}
+.list-help-bg li, .tabcontent  li {
+    line-height: 30px;
+    font-size: 19px;
+    padding: 0 20px;
+    box-sizing: border-box;
+    margin-bottom: 5px;
+}
+.list-help-bg li {
+    float: left;
+    width: 50%;
+}
+.list-help-bg li a, .tabcontent  li a{
+    color: #0286cd;
+}
+.list-help-bg {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 40px;
+}
+.tab img {
+    height: 23px;
+    float: left;
+}
+.tab button {
+    display: block;
+    width: 100%;
+    margin-bottom: 5px;
+    text-align: left;
+    border: none;
+    background-color: #f0f0f0;
+    padding: 10px;
+}
+.tab button span {
+    display: inline-block;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+.tabing .tab {
+    float: left;
+    margin-right: 11px;
+    width: 20%;
+}
+
+.tabing .right-part {
+    float: left;
+    width: 75%;
+    background-color: #f0f0f0;
+    padding: 20px; 
+}
+
+.login-redirct .left-part, .login-redirct .right-part {
+    float: left;
+    width: 50%;
+    padding-top: 10px;
+}
+.login-redirct {
+    clear: both;
+    margin-top: 40px;
+    display: inline-block;
+    width: 100%;
+    border-top: 1px solid;
+}
+.login-redirct button {
+    display: block;
+    text-align: center;
+    width: 60%;
+    background-image: -webkit-linear-gradient(left,#025f8e,#0286cd);
+    border: none;
+    padding: 15px 15px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 10px auto;
+}
+.login-redirct .right-part {
+    background-color: gainsboro;
+    padding: 20px;
+    box-sizing: border-box;
+}
+.login-redirct .right-part h2 {
+    font-size: 17px;
+    line-height: 20px;
+    font-weight: normal;
+}
+.login-redirct .right-part  small {
+    margin-bottom: 20px;
+    display: block;
+}
+/*-------------------show-location------------------*/ 
+
+.left-part-item {
+    float: left
+}
+.left-part-item h2 {
+    text-transform: uppercase;s
+}
+.right-part-location {
+    float: right;
+    display: inline-flex;
+}
+.top-div {
+    display: inline-block;
+    padding: 10px;
+    width: 100%;
+}
+.right-part-location * {
+    padding: 0 13px;
+}
+.right-part-location select {
+    height: 37px;
+    width: 138px;
+    background-color: gray;
+    color: #fff;
+}
+.right-part-location button {
+    border: none;
+    width: 40px;
+    height: 36px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    right: 15px;
+}
+.right-part-location button i {
+    padding: 0; 
+}
+.search-map {
+    position: relative;
+}
+.right-part-location input {
+    width: 250px;
+    padding-left: 5px;
+    font-size: 14px;
+}
+.store-location {
+    margin-bottom: 30px;
 }
